@@ -1,0 +1,4 @@
+NHL_STATS_API_HOST="statsapi.web.nhl.com"
+SEASON_START_DATE="2018-10-02"
+CHECKED_TO_FILE="CHECKED_TO.txt"
+HIT_MISS_FILE="HIT_MISS.txt"
